--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,44 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>{% block title %}Document{% endblock title %}</title>
+    <title>{% block title %}{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+
 {% block content %}
 {% endblock content %}
+
 </body>
+{% block scripts %}
+    <script src="{% static 'js/script.js' %}"></script>
+    <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const sidebar = document.getElementById("sidebar");
+      const toggleBtn = document.getElementById("toggle-btn");
+
+      document.querySelectorAll(".dropdown-btn").forEach((btn) => {
+        const arrowIcon = btn.querySelector(".bi-arrow-bar-down");
+        btn.addEventListener("click", () => {
+          // Zkontrolujte, zda existuje nextElementSibling
+          if (btn.nextElementSibling) {
+            btn.nextElementSibling.classList.toggle("show");
+          }
+          if (arrowIcon) {
+            arrowIcon.classList.toggle("rotated");
+          }
+          if (sidebar.classList.contains("close")) {
+            sidebar.classList.toggle("close");
+            toggleBtn.classList.toggle("active");
+          }
+        });
+      });
+    });
+    </script>
+{% endblock scripts %}
 </html>
