Add filtering and pagination to order summary view
The order summary view now supports filtering by various fields through GET parameters and includes pagination functionality. Updated the template and JavaScript to handle dynamic filtering and pagination via AJAX requests, enhancing user experience without full page reloads. Additionally, added IntelliJ project files and configurations to `.idea/` directory.

--- a/app_sprava_montazi/templates/app_sprava_montazi.html
+++ b/app_sprava_montazi/templates/app_sprava_montazi.html
@@ -53,7 +53,7 @@
             </li>
         </ul>
     </aside>
-    <main class="content-wrapper">
+    <main>
         <div class="content-wrapper">
             <img src="{% static 'images/pngegg.png' %}" alt="Logo Rhenus" style="scale: 40%;">
         </div>
