--- a/app_sprava_montazi/templates/partials/order_summary.html
+++ b/app_sprava_montazi/templates/partials/order_summary.html
@@ -1,18 +1,29 @@
 <div class="order-summary-container">
-  <h2>Přehled zakázek</h2>
+  <h4><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-ui-checks" viewBox="0 0 16 16"><path d="M7 2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zM2 1a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2zm0 8a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h2a2 2 0 0 0 2-2v-2a2 2 0 0 0-2-2zm.854-3.646a.5.5 0 0 1-.708 0l-1-1a.5.5 0 1 1 .708-.708l.646.647 1.646-1.647a.5.5 0 1 1 .708.708zm0 8a.5.5 0 0 1-.708 0l-1-1a.5.5 0 0 1 .708-.708l.646.647 1.646-1.647a.5.5 0 0 1 .708.708zM7 10.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zm0-5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0 8a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5"/></svg>Přehled zakázek</h4>
   <!-- Filtrační formulář -->
   <form id="filter-form" class="filter-form" action="{% url 'order_summary' %}" method="get">
   <div class="field order-number">
+      <label for="evidence_start">
+        <small>Dle čísla zakázky</small>
+     </label>
     <input type="text" name="order_number" placeholder="Číslo zakázky" value="{{ request.GET.order_number|default:'' }}">
   </div>
   <div class="field mandant">
+      <label for="evidence_start">
+        <small>Dle zkratky mandanta</small>
+     </label>
     <input type="text" name="mandant" placeholder="Mandant" value="{{ request.GET.mandant|default:'' }}">
   </div>
   <div class="field evidence-start">
+      <label for="evidence_start">
+        <small>Evidence od</small>
+     </label>
     <input type="date" name="evidence_start" placeholder="Evidence od" value="{{ request.GET.evidence_start|default:'' }}">
   </div>
-
   <div class="field store">
+    <label for="evidence_start">
+        <small>Dle výběru skladu/OD</small>
+    </label>
     <select name="store">
       <option value="">Všechny sklady</option>
       {% for st in stores %}
@@ -21,6 +32,9 @@
     </select>
   </div>
   <div class="field team">
+    <label for="evidence_start">
+        <small>Dle výběru týmu</small>
+    </label>
     <select name="team">
       <option value="">Všechny týmy</option>
       {% for t in teams %}
@@ -29,6 +43,9 @@
     </select>
   </div>
   <div class="field evidence-end">
+      <label for="evidence_end">
+        <small>Evidence do</small>
+     </label>
     <input type="date" name="evidence_end" placeholder="Evidence do" value="{{ request.GET.evidence_end|default:'' }}">
   </div>
 
@@ -36,7 +53,7 @@
     <button type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-filter-square" viewBox="0 0 16 16"><path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/><path d="M6 11.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5"/></svg>Filtrovat</button>
   </div>
 </form>
-
+<div class="table-wrapper">
   <table class="order-table">
     <thead>
       <tr>
@@ -75,6 +92,7 @@
       {% endfor %}
     </tbody>
   </table>
+</div>
   <div class="styled-pagination">
     {% if orders.has_previous %}
       <a class="ajax-link" href="{% url 'order_summary' %}?page={{ orders.previous_page_number }}{% if request.GET.order_number %}&order_number={{ request.GET.order_number }}{% endif %}{% if request.GET.mandant %}&mandant={{ request.GET.mandant }}{% endif %}{% if request.GET.store %}&store={{ request.GET.store }}{% endif %}{% if request.GET.evidence_start %}&evidence_start={{ request.GET.evidence_start }}{% endif %}{% if request.GET.evidence_end %}&evidence_end={{ request.GET.evidence_end }}{% endif %}{% if request.GET.team %}&team={{ request.GET.team }}{% endif %}">← Zpět</a>
